--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "github-actions-report-lcov",
+  "name": "github-actions-record-lcov",
   "version": "1.0.0",
-  "description": "Report the code coverage from LCOV files",
+  "description": "Record the code coverage from LCOV files",
   "main": "dist/main/index.js",
   "scripts": {
     "lint": "eslint .",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/zgosalvez/github-actions-report-lcov.git"
+    "url": "git+https://github.com/dethereum/github-actions-record-lcov.git"
   },
   "keywords": [
     "actions",
